# embedded-lab

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  VGT6-FMC-LCD.ioc  VGT6-ShellTest.ioc
Applications/: app-fileSystem.cpp  app-fileSystem.h  app-host.h  usr_entry.cpp
Applications/Service/: service_explorer.cpp
Core/Inc/: stm32h7xx_hal_conf.h  tim.h
Core/Src/: fmc.c  freertos.c  main.c  stm32h7xx_it.c  tim.c  usart.c
Drivers/Devices/ILI9481/: drv-ili9481.h
Middlewares/: utils.h  utils.s
Middlewares/Proto/: proto-def-mek.h  proto-mek.cpp
cmake/stm32cubemx/: CMakeLists.txt
esp32/bleGamepad/: CMakeLists.txt
esp32/bleGamepad/main/: CMakeLists.txt
esp32/c6-wifiSta/: CMakeLists.txt
esp32/c6-wifiSta/main/: CMakeLists.txt  app-wifiSta.cpp  app-wifiSta.h  application-base.h  main.cpp
esp32/camera/main/: camera.cpp
esp32/camera/main/device/: ov5647.cpp  ov5647.h
esp32/camera/main/periphery/: comm-i2c.cpp  comm-i2c.h
esp32/play-station/: .gitignore  CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old
esp32/play-station/components/gamepad/: CMakeLists.txt  Gamepad.cpp  Gamepad.h
esp32/play-station/components/lcd-i80/: CMakeLists.txt  lcd-i80-config.h  lcd-i80.cpp  lcd-i80.h  lcd-st7789-def.h
esp32/play-station/components/nofrendo/: CMakeLists.txt  bitmap.h  config.c  event.h  log.c  log.h  memguard.h  nofrendo.c  nofrendo.h  noftypes.h  osd.h  vid_drv.c
esp32/play-station/components/nofrendo/libsnss/: libsnss.c
esp32/play-station/components/nofrendo/nes/: nes.c  nes.h  nes_mmc.c  nes_ppu.c  nes_rom.c
esp32/play-station/littlefs/: head.txt
esp32/play-station/main/: CMakeLists.txt  idf_component.yml  main.c  main.cpp  sys_call.cpp
esp32/play-station/main/applications/: app-audio.cpp  app-audio.h  app-display.cpp  app-display.h  app-filesys.cpp  app-filesys.h  app-gamepad.cpp  app-gamepad.h  app-nofrendo.cpp  app-nofrendo.h  app-show.cpp  app-show.h  app-wifi.cpp  app-wifi.h  application-base.h
esp32/udp-test/: CMakeLists.txt
esp32/udp-test/main/: CMakeLists.txt  udp-test.c
esp32/wifiSta/main/: CMakeLists.txt
linkConfig/: ST-link.cfg
main/: BLE_Hello.c
multi-arch/IoT-Media-Terminal/h723vg-main-ctrl/: .mxproject  CMakeLists.txt  STM32H723XG_FLASH.ld  h723vg-main-ctrl.ioc
multi-arch/IoT-Media-Terminal/h723vg-main-ctrl/User/Middlewares/lvgl/: CMakeLists.txt  lv_conf.h  lv_port_disp.c  lv_port_disp.h
multi-arch/IoT-Media-Terminal/h723vg-main-ctrl/User/Middlewares/lvgl/src/: lv_conf_internal.h
multi-arch/IoT-Media-Terminal/h723vg-main-ctrl/User/Middlewares/lvgl/src/stdlib/builtin/: lv_mem_core_builtin.c
stm32/distance-measurement/: .gitignore  .mxproject  CMakeLists.txt  STM32F407XX_FLASH.ld  distance-measurement.ioc
stm32/distance-measurement/Core/Inc/: FreeRTOSConfig.h  stm32f4xx_it.h
stm32/distance-measurement/Core/Src/: dma.c  freertos.c  i2c.c  main.c  stm32f4xx_it.c  usart.c
stm32/distance-measurement/User/Application/: app-asciiProcess.cpp  app-asciiProcess.h  app-iic.cpp  app-iic.h  (+3 more)
stm32/distance-measurement/linkConfig/: dap-link.cfg
stm32/h723vg-bmi08x/: .mxproject  CMakeLists.txt  STM32H723XG_FLASH.ld  h723vg-bmi08x.ioc
stm32/h723vg-bmi08x/Applications/: app-host.cpp  app-host.h  app-imu.cpp  app-imu.h  application-base.h  cpp_zone_entry.cpp  cpp_zone_entry.h
stm32/h723vg-bmi08x/linkConfig/: jlink.cfg
stm32/h723vg-filesys/: .mxproject  STM32H723XG_FLASH.ld
stm32/h723vg-filesys/Applications/: app-host.cpp  app-shell.h
stm32/h723vg-fmc-lcd/: .mxproject  CMakeLists.txt  STM32H723XG_FLASH.ld  dump.txt
stm32/h723vg-fmc-lcd/Applications/: app-graphic.cpp  app-graphic.h  app-host.cpp  app-intf.h  app-mallocFailed.cpp  usr_entry.h
stm32/h723vg-fmc-lcd/Middlewares/: utils.cpp
(+75 files in other folders)
